feat: finish new one

--- a/app/javascript/entrypoints/public.scss
+++ b/app/javascript/entrypoints/public.scss
@@ -1,6 +1,6 @@
 @import "@fortawesome/fontawesome-free/css/all";
 @import '../public/style.scss';
 body {
-  font-family: 'Noto Sans TC', 'PingFang TC', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'PingFang TC', 'Helvetica Neue', Helvetica, 'Microsoft JhengHei', sans-serif;
   font-weight: 400;
 }
