--- a/app/javascript/public/style.scss
+++ b/app/javascript/public/style.scss
@@ -26,6 +26,15 @@
 @import 'styles/pages/tmp'; // 速行 demo 用
 @import 'styles/pages/faqs';
 @import 'styles/pages/index';
+@import 'styles/pages/about';
+@import 'styles/pages/country';
+@import 'styles/pages/countryIntroduction';
+@import 'styles/pages/news';
+@import 'styles/pages/newsDetail';
+@import 'styles/pages/schoolsDetail';
+@import 'styles/pages/contactUs';
+@import 'styles/pages/thanks';
+@import 'styles/pages/privacy';
 
 // users
 @import 'styles/users/user_form';
