--- a/app/javascript/public/styles/components/_footer.scss
+++ b/app/javascript/public/styles/components/_footer.scss
@@ -12,7 +12,7 @@ footer.footer {
   .footer-contact {
     padding: 1rem 0;
     margin-top: 1rem;
-    border-bottom: 1px solid #454545;
+    border-bottom: 1px solid #E1E1E1;
     a {
       display: block;
       margin-bottom: 4px;
@@ -38,9 +38,7 @@ footer.footer {
 
 
 .site-footer {
-  background: #fff;
-  font-family: "Helvetica Neue", sans-serif;
-  color: #333;
+    color: #535353;
 
   .footer-banner {
     background: #2F8082;
