--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,173 @@
-<%# breadcrumb 可選擇是否顯示，但勿刪 breadcrumb_schema 須使用 %>
-<% render "partials/breadcrumb", crumbs: [
-    { text: @index_title }
-  ] %>
-<div class="wrap" data-page="about">
-  <div class="container">
-    <%= content_tag(:h1, @index_title, class: 'title-lg') %>
-    <% if @page.present? %>
-        <div class="custom-editor">
-          <%= @page.content_i18n %>
-        </div>
-      <% end%>
+<div class="cloud-bg">
+  <%= image_tag 'cloud-bg.png', alt: '易齊國際' %>
+</div>
+<div class="about-header">
+  <%= image_tag 'inner-pages-top-decor.png', alt: '易齊國際', style:'width: 54px;margin-bottom: 20px;' %>
+  <h1>關於我們</h1>
+</div>
+
+<div class="about-tabs">
+  <div class="tab-item active" data-tab="company">
+    <div class="tab-icon"></div>
+    <p>公司介紹</p>
+  </div>
+  <div class="tab-item" data-tab="philosophy">
+    <div class="tab-icon"></div>
+    <p>經營理念</p>
+  </div>
+  <div class="tab-item" data-tab="team">
+    <div class="tab-icon"></div>
+    <p>組織成員</p>
   </div>
 </div>
+
+<div class="tab-content">
+  <div class="tab-panel active" id="company">
+    <div class="about-intro">
+      <div class="about-intro__content">
+        <h2>珍惜所託｜客戶至上｜專業服務<br>值得信賴｜成就夢想</h2>
+        <p>
+          易齊移民專注於美洲、歐洲、大洋洲及亞洲的國際移民市場<br>
+          致力於為全球家庭提供專業移民服務。<br>
+          我們成功協助數千個客戶實現移民夢想<br><br>
+
+          服務範圍涵蓋全球投資移民、企業家移民、技術移民、教育移民、退休移民等<br>
+          目標國家包括美國、加拿大、澳洲、土耳其、葡萄牙、馬爾他和日本等<br><br>
+
+          無論您是需求事業發展、家庭團聚或其他需求<br>
+          我們都能為您量身定制最適合的移民解決方案<br>
+          簡化每個過程。
+        </p>
+      </div>
+    </div>
+
+
+    <div class="container">
+      <div class="features-video">
+        <h2 class="section-title">Features Video</h2>
+        <div class="video-grid">
+          <div class="video-item">
+            <div class="video-thumb" style="background-image: url('<%= image_path("video-bg.png") %>');">
+              <div class="play-icon"><%= image_tag 'video-arrow.png', alt: '易齊國際' %></div>
+            </div>
+          </div>
+          <div class="video-item">
+            <div class="video-thumb" style="background-image: url('<%= image_path("video-bg.png") %>');">
+              <div class="play-icon"><%= image_tag 'video-arrow.png', alt: '易齊國際' %></div>
+            </div>
+          </div>
+          <div class="video-item">
+            <div class="video-thumb" style="background-image: url('<%= image_path("video-bg.png") %>');">
+              <div class="play-icon"><%= image_tag 'video-arrow.png', alt: '易齊國際' %>s</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  <div class="tab-panel" id="philosophy">
+    <div class="why-choose-us">
+      <h2 class="section-title">為何選擇我們？</h2>
+      <div class="features-section container">
+        <!-- Block 2: 豐富人脈（圖左、文字右） -->
+        <div class="feature-block">
+          <div class="feature-image">
+            <img src="<%= image_path('about-1.png') %>" alt="豐富人脈" />
+          </div>
+          <div class="feature-text">
+            <h3>專業服務</h3>
+            <p>我們針對不同移民類型提供專業建議與服務，確保您的移民過程高效、順利。</p>
+          </div>
+          
+        </div>
+        <!-- Block 1: 專業服務（文字左、圖右） -->
+        <div class="feature-block">
+          <div class="feature-text">
+            <h3>豐富人脈</h3>
+            <p>與全球頂尖律師、政府機構、教育機構及房產開發商等建立長期合作關係，提供穩定支持。</p>
+          </div>
+          <div class="feature-image">
+            <img src="<%= image_path('about-2.png') %>" alt="專業服務" />
+          </div>
+        </div>
+        <!-- Block 2: 豐富人脈（圖左、文字右） -->
+        <div class="feature-block">
+          <div class="feature-image">
+            <img src="<%= image_path('about-3.png') %>" alt="豐富人脈" />
+          </div>
+          <div class="feature-text">
+            <h3>專屬方案</h3>
+            <p>根據客戶的需求與目標，量身定制的移民方案，精確指導每個細節。</p>
+          </div>
+          
+        </div>
+        <!-- Block 1: 專業服務（文字左、圖右） -->
+        <div class="feature-block">
+          <div class="feature-text">
+            <h3>可靠團隊</h3>
+            <p>核心團隊擁有超過五年的共同合作經歷，成功協助眾多家庭實現移民目標。</p>
+          </div>
+          <div class="feature-image">
+            <img src="<%= image_path('about-4.png') %>" alt="專業服務" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="tab-panel" id="team">
+    <div class="team">
+      <p class="section-introduce">
+      易齊移民始終秉持著幫助客戶實現更好未來的使命。<br>
+      選擇我們，讓您的移民之旅更加輕鬆順利<br>
+      開啟嶄新的生活篇章!
+      </p>
+      <div class="container">
+        <div class="person-block">
+          <div class="person-info">
+            <div class="title-wrap">
+              <h2>Sally Chen</h2>
+              <h4>資深合夥人</h4>
+            </div>
+            <p>
+              Sally 擁有超過20年的移民案件處理及項目開發經驗，是易齊移民(EZGO)共同創辦人之一。曾任台灣知名移民公司項目部副總，負責移民產品開發、申請管理及客戶關係維護。她成功協助數千個家庭完成移民計劃，無論在策略規劃、項目選擇或複雜申請處理上，皆提供專業指導。Sally 深厚的專業背景與行業經驗,為易齊移民提供穩固服務保障，確保每位客戶獲得最佳移民解決方案。
+            </p>
+          </div>
+          <div class="person-photo">
+            <img src="<%= image_path('profile-1.png') %>" alt="Sally Chen">
+          </div>
+        </div>
+        <div class="person-block">
+          <div class="person-photo reverse">
+            <img src="<%= image_path('profile-2.png') %>" alt="Ingrid Chen">
+          </div>
+          <div class="person-info reverse">
+            <div class="title-wrap">
+              <h2>Ingrid Chen</h2>
+              <h4>合夥人</h4>
+            </div>
+            <p>
+              Ingrid 作為易齊移民EZGO的共同創辦人之一，曾擔任台灣知名移民公司業務高管及法務，擁有豐富的實務經驗。她專注於為客戶量身設計最合適的移民計劃，並全程提供細緻的陪伴與指導，確保每個細節都符合規範。Ingrid 以其嚴謹的專業態度，成功協助眾多家庭順利實現移民夢想。
+            </p>
+          </div>
+        </div>
+        <div class="person-block">
+          <div class="person-info">
+            <div class="title-wrap">
+              <h2>Alexia Huang</h2>
+              <h4>合夥人</h4>
+            </div>
+            <p>
+              Alexia 擁有超過10年的豐富移民行業經驗，在共同創立易齊移民 EZGO 之前，曾擔任台灣知名移民公司項目部高管。她熟練處理美國投資移民資金來源，並有豐富的歐洲國家(如葡萄牙、希臘、賽普勒斯等)房產移民經驗。她也擅長成功辦理多個投資型護照國家的申請,對各國移民法規的變化有深入了解。憑藉專業背景與經驗，Alexia 為客戶提供高效、專業的移民解決方案，並在行業內享有高度聲譽。
+            </p>
+          </div>
+          <div class="person-photo">
+            <img src="<%= image_path('profile-3.png') %>" alt="Alexia Huang">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
