--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -221,6 +221,17 @@
       </div>
     </div>
   </div>
-
-
 </div>
+
+<div class="button-container">
+  <!-- Contact Button -->
+  <a href="#contact" class="circle-button" aria-label="Contact">
+    <img src="<%= image_path('plane-icon.png') %>" alt="Contact icon" class="icon" />
+  </a>
+
+  <!-- Back to Top Button -->
+  <button type="button" class="circle-button-back-top" id="backToTopBtn" aria-label="Back to Top">
+    <img src="<%= image_path('chevron-top.png') %>" alt="Back to top icon" class="icon" />
+  </button>
+</div>
+
