--- a/app/javascript/public/styles/pages/_index.scss
+++ b/app/javascript/public/styles/pages/_index.scss
@@ -4,7 +4,9 @@
 body {
   background: linear-gradient(135deg, #E7F1F5, #C4E1E7);
 }
-
+button:focus {
+    outline: unset !important;
+}
 .d-flex-align-items-center {
   display: flex;
   align-items: center;
@@ -417,105 +419,138 @@ body {
     }
   }
 
-  .news-list {
+  .news-button {
+    margin-top: 40px;
+    text-align: center;
+
+  }
+}
+
+.news-list {
     display: flex;
     flex-direction: column;
     gap: 16px;
     margin: 0 auto;
   }
 
-  .news-item {
-    display: flex;
-    align-items: center;
-    background: #fff;
-    border-radius: 16px;
-    padding: 16px 24px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    gap: 16px;
+.news-item {
+  display: flex;
+  align-items: center;
+  background: #fff;
+  border-radius: 16px;
+  padding: 16px 24px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+  gap: 16px;
 
-    .news-date {
-      text-align: center;
-      font-size: 14px;
-      color: #444;
-      line-height: 1.4;
-      width: 90px;
-      flex-shrink: 0;
+  .news-date {
+    text-align: center;
+    font-size: 14px;
+    color: #444;
+    line-height: 1.4;
+    width: 90px;
+    flex-shrink: 0;
 
-      .d-flex {
-        gap: 10px;
-        align-items: center;
-        gap: 10px;
-        text-align: left;
-        display: flex;
-        margin-bottom: 4px;
+    .d-flex {
+      gap: 10px;
+      align-items: center;
+      gap: 10px;
+      text-align: left;
+      display: flex;
+      margin-bottom: 4px;
 
-      }
-      .day {
-        font-size: 2.5rem;
-        font-weight: bold;
-        color: #2F8082;
-        display: block;
-      }
-
-      .year,
-      .month {
-        display: block;
-        font-size: 0.85rem;
-        color: #808284;
-      }
-
-      .tag {
-        background: #2F8082;
-        color: #fff;
-        padding: 4px 13px;
-        font-size: 1rem;
-        border-radius: 40px;
-        display: inline-block;
-      }
+    }
+    .day {
+      font-size: 2.5rem;
+      color: #2F8082;
+      display: block;
     }
 
-    .news-image img {
-      width: 200px;
-      object-fit: cover;
-      border-radius: 8px;
+    .year,
+    .month {
+      display: block;
+      font-size: 0.85rem;
+      color: #808284;
     }
 
-    .news-content {
-      flex: 1;
-      margin-right: 180px;
-
-      h3 {
-        font-size: 1.25rem;
-        margin-bottom: 6px;
-        color: #1F1F1F;
-      }
-
-      p {
-        font-size: 1rem;
-      }
-    }
-
-    .news-more {
-      flex-shrink: 0;
-
-      a {
-        width: 35px;
-        height: 35px;
-        border-radius: 50%;
-        background: #C3996B;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #fff;
-        text-decoration: none;
-      }
+    .tag {
+      background: #2F8082;
+      color: #fff;
+      padding: 4px 13px;
+      font-size: 1rem;
+      border-radius: 40px;
+      display: inline-block;
     }
   }
 
-  .news-button {
-    margin-top: 40px;
-    text-align: center;
+  .news-image img {
+    width: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
 
+  .news-content {
+    flex: 1;
+    margin-right: 180px;
+
+    h3 {
+      font-size: 1.125rem;
+      margin-bottom: 6px;
+      color: #1F1F1F;
+    }
+
+    p {
+      font-size: 1rem;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+
+    }
+  }
+}
+
+.news-more {
+  flex-shrink: 0;
+
+  a {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background: #C3996B;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-decoration: none;
+  }
+}
+.news-item {
+
+  &:hover {
+    .day,
+    .year,
+    .month {
+      color: #C3996B;
+    }
+
+    .tag {
+      background: #C3996B;
+    }
+
+    .news-content h3 {
+      color: #C3996B;
+    }
+  }
+}
+.news-item {
+  transition: all 0.3s ease;
+
+  .day,
+  .year,
+  .month,
+  .tag,
+  .news-content h3 {
+    transition: color 0.3s ease, background 0.3s ease;
   }
 }
 
@@ -684,6 +719,58 @@ body {
   width: 100%;
   transform: translateY(50%);
 }
+.button-container {
+  position: fixed;
+  right: 20px;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  z-index: 1000;
+
+  .circle-button,
+  .circle-button-back-top {
+    border: 0;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+
+    .icon {
+      width: 27px;
+      height: auto;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
+    }
+  }
+
+  .circle-button {
+    border-radius: 50%;
+    background-color: #C3996B;
+
+    &:hover {
+      background-color: #b18357;
+    }
+  }
+
+  .circle-button-back-top {
+    border-radius: 100px 100px 0 0;
+    background-color: #bbbcbc;
+
+    &:hover {
+      background-color: #999;
+    }
+  }
+}
+
 
 @media (min-width: 1920px) { 
    .container {
