--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -21,6 +21,10 @@
       <%= render 'partials/fb_pixel', fb_pixel: @fb_pixel if @fb_pixel.present? %>
     <% end %>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap" rel="stylesheet">
+
+
 
   </head>
 
